fixes collapse/uncollapse symbol color for metastations in filter
ticket: #567

--- a/src/app/tracing/configuration/filter-table-view/filter-table-view.component.scss
+++ b/src/app/tracing/configuration/filter-table-view/filter-table-view.component.scss
@@ -219,6 +219,10 @@
         .datatable-body-row {
             &.active,
             &.active .datatable-row-group {
+                .datatable-body-cell-label .fcl-tree-action-icon {
+                    color: rgb(0, 0, 0);
+                }
+
                 .fcl-row-cell-invisible {
                     .datatable-body-cell-label {
                         color: $fcl-accent-200;
